gfx/thebes/gfxContext.cpp
@@ -1405,6 +1405,7 @@ gfxContext::GetRoundOffsetsToPixels(bool *aRoundX, bool *aRoundY)
                     DWRITE_MEASURING_MODE_NATURAL) {
                 return;
             }
+            MOZ_FALLTHROUGH;
 #endif
         case CAIRO_FONT_TYPE_QUARTZ:
             // Quartz surfaces implement show_glyphs for Quartz fonts
@@ -1412,13 +1413,13 @@ gfxContext::GetRoundOffsetsToPixels(bool *aRoundX, bool *aRoundY)
                 CAIRO_SURFACE_TYPE_QUARTZ) {
                 return;
             }
+            break;
         default:
             break;
         }
-        // fall through:
+        break;
     case CAIRO_HINT_METRICS_ON:
         break;
     }
     *aRoundX = true;
-    return;
 }
